--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,28 +41,28 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 */
 
 @font-face {
-  font-family: Montserrat-Regular;
-  src: url('../fonts/montserrat/Montserrat-Regular.ttf'); 
+  font-family: Kanit-Regular;
+  src: url('../fonts/kanit/Kanit-Regular.ttf'); 
 }
 
 @font-face {
-  font-family: Montserrat-Medium;
-  src: url('../fonts/montserrat/Montserrat-Medium.ttf'); 
+  font-family: Kanit-Medium;
+  src: url('../fonts/kanit/Kanit-Medium.ttf'); 
 }
 
 @font-face {
-  font-family: Montserrat-Bold;
-  src: url('../fonts/montserrat/Montserrat-Bold.ttf'); 
+  font-family: Kanit-Bold;
+  src: url('../fonts/kanit/Kanit-Bold.ttf'); 
 }
 
 @font-face {
-  font-family: Montserrat-Italic;
-  src: url('../fonts/montserrat/Montserrat-Italic.ttf'); 
+  font-family: Kanit-Italic;
+  src: url('../fonts/kanit/Kanit-Italic.ttf'); 
 }
 
 @font-face {
-  font-family: Montserrat-Black;
-  src: url('../fonts/montserrat/Montserrat-Black.ttf'); 
+  font-family: Kanit-Black;
+  src: url('../fonts/kanit/Kanit-Black.ttf'); 
 }
 
 @font-face {
@@ -91,13 +91,13 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 
 body, html {
 	height: 100%;
-	font-family: Montserrat-Regular, sans-serif;
+	font-family: Kanit-Regular, sans-serif;
   font-weight: 400;
 }
 
 /* ------------------------------------ */
 a {
-	font-family: Montserrat-Regular;
+	font-family: Kanit-Regular;
   font-weight: 400;
 	font-size: 15px;
 	line-height: 1.7;
@@ -115,7 +115,7 @@ a:focus {
 
 a:hover {
 	text-decoration: none;
-	color: #e65540;
+	color: #fcc404;
 }
 
 /* ------------------------------------ */
@@ -124,7 +124,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 p {
-	font-family: Montserrat-Regular;
+	font-family: Kanit-Regular;
 	font-size: 15px;
 	line-height: 1.7;
 	color: #888888;
@@ -212,7 +212,7 @@ iframe {
     -o-animation: ball-scale infinite linear .75s;
     animation: ball-scale infinite linear .75s;
     border-radius: 100%;
-    background-color: #e65540;
+    background-color: #fcc404;
 }
 
 @-webkit-keyframes ball-scale {
@@ -354,7 +354,7 @@ iframe {
 /* in select */
 .select2-container .select2-selection--single .select2-selection__rendered {
   font-size: 13px;
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   line-height: 20px;
   color: #888888;
   padding-left: 0px ;
@@ -410,25 +410,25 @@ iframe {
 }
 
 .select2-container .select2-results__option[aria-selected="true"] {
-  background-color: #e65540;
+  background-color: #fcc404;
   color: white;
 }
 
 .select2-container .select2-results__option--highlighted[aria-selected] {
-  background-color: #e65540;
+  background-color: #fcc404;
   color: white;
 }
 
 .select2-results__options {
   font-size: 13px;
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   color: #888888;
 }
 
 .select2-search--dropdown .select2-search__field {
   border: 1px solid #aaa;
   outline: none;
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 13px;
   color: #888888;
 }
@@ -574,7 +574,7 @@ iframe {
 /* ------------------------------------ */
 .topbar-email,
 .topbar-child1 {
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 13px;
   color: #888888;
   line-height: 1.7;
@@ -667,7 +667,7 @@ iframe {
 }
 
 .main_menu > li > a {
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 15px;
   color: #333333;
   padding: 0;
@@ -675,7 +675,7 @@ iframe {
 }
 
 li.sale-noti > a {
-  color: #e65540;
+  color: #fcc404;
 }
 
 .main_menu > li:hover > a {
@@ -730,13 +730,13 @@ li.sale-noti > a {
 
 .sub_menu li, .sub_menu a {
   padding: 10px;
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 13px;
   color: white;
 }
 
 .sub_menu > li:hover > a {
-  color: #e65540;
+  color: #fcc404;
   text-decoration: none;
 }
 
@@ -787,7 +787,7 @@ li.sale-noti > a {
   border-radius: 50%;
   background-color: #111111;
   color: white;
-  font-family: Montserrat-Medium;
+  font-family: Kanit-Medium;
   font-size: 12px;
   position: absolute;
   top: 0;
@@ -913,7 +913,7 @@ li.sale-noti > a {
 
 .header-cart-item-name {
   display: block;
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 15px;
   color: #555555;
   line-height: 1.3;
@@ -922,14 +922,14 @@ li.sale-noti > a {
 
 .header-cart-item-info {
   display: block;
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 12px;
   color: #888888;
   line-height: 1.5;
 }
 
 .header-cart-total {
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 15px;
   color: #555555;
   line-height: 1.3;
@@ -1056,12 +1056,12 @@ li.sale-noti > a {
 .side-menu .main-menu {margin-bottom: 0;}
 
 .item-menu-mobile {
-  background-color: #e65540;
+  background-color: #fcc404;
 }
 
 .side-menu .main-menu > li > a {
   padding-left: 20px;
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 15px;
   color: white;
   line-height: 2.86;
@@ -1099,7 +1099,7 @@ li.sale-noti > a {
 
 .side-menu .sub-menu a {
   padding-left: 20px;
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 13px;
   color: #333333;
   line-height: 2.5;
@@ -1113,7 +1113,7 @@ li.sale-noti > a {
 .side-menu .sub-menu a:hover {
   text-decoration: none;
   padding-left: 20px;
-  color: #e65540 !important;
+  color: #fcc404 !important;
 }
 
 .side-menu .sub-menu {
@@ -1173,7 +1173,7 @@ li.sale-noti > a {
 }
 
 .logo2 img {
-  max-height: 27px;
+  max-height: 60px;
 }
 
 .fixed-header2 {
@@ -1401,7 +1401,7 @@ li.sale-noti > a {
 }
 
 .arrow-slick1:hover {
-  background-color: #e65540;
+  background-color: #fcc404;
 }
 
 .next-slick1 {
@@ -1572,8 +1572,8 @@ li.sale-noti > a {
 }
 
 .swal-button {
-    background-color: #e65540;
-    font-family: Montserrat-Regular;
+    background-color: #fcc404;
+    font-family: Kanit-Regular;
     font-size: 15px;
     color: white;
     text-transform: uppercase;
@@ -1590,11 +1590,11 @@ li.sale-noti > a {
 }
 
 .swal-button:active {
-    background-color: #e65540;
+    background-color: #fcc404;
 }
 
 .swal-title {
-  font-family: Montserrat-Medium;
+  font-family: Kanit-Medium;
   color: #333333;
   font-size: 16px;
   line-height: 1.5;
@@ -1602,7 +1602,7 @@ li.sale-noti > a {
 }
 
 .swal-text {
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   color: #333333;
   font-size: 15px;
   text-align: center;
@@ -1641,7 +1641,7 @@ li.sale-noti > a {
 .block2-labelnew::before 
 {
   z-index: 100;
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 12px;
   color: white;
   display: -webkit-box;
@@ -1660,7 +1660,7 @@ li.sale-noti > a {
 }
 
 .block2-labelsale::before {
-  background-color: #e65540;
+  background-color: #fcc404;
   content: 'Sale';
 }
 
@@ -1733,7 +1733,7 @@ li.sale-noti > a {
 
 .block2-btn-towishlist .icon_heart {
   display: block;
-  color: #e65540;
+  color: #fcc404;
 }
 
 /* ------------------------------------ */
@@ -1954,7 +1954,7 @@ li.sale-noti > a {
 }
 
 .item-pagination {
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 13px;
   color: #808080;
   width: 36px;
@@ -2097,7 +2097,7 @@ li.sale-noti > a {
 }
 
 .table-shopping-cart .table-head th {
-  font-family: Montserrat-Bold;
+  font-family: Kanit-Bold;
   font-size: 13px;
   color: #555555;
   line-height: 1.5;
@@ -2107,7 +2107,7 @@ li.sale-noti > a {
 }
 
 .table-shopping-cart td {
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 16px;
   color: #555555;
   line-height: 1.5;
@@ -2171,7 +2171,7 @@ li.sale-noti > a {
 
 .tag-item {
   display: block;
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 13px;
   color: #888888;
   line-height: 1.5;
@@ -2182,7 +2182,7 @@ li.sale-noti > a {
 }
 
 .tag-item:hover {
-  border: 1px solid #e65540;
+  border: 1px solid #fcc404;
 }
 
 
@@ -2213,7 +2213,7 @@ li.sale-noti > a {
   border-radius: 0px;
   border: none;
   border-bottom: 1px solid transparent;
-  font-family: Montserrat-Regular;
+  font-family: Kanit-Regular;
   font-size: 15px;
   color: #888888;
   line-height: 1.1;
