--- a/public/css_login/main.css
+++ b/public/css_login/main.css
@@ -5,24 +5,28 @@
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
+
+
+
+
 @font-face {
-  font-family: Raleway-Regular;
-  src: url('../fonts/raleway/Raleway-Regular.ttf'); 
+  font-family: Kanit-Regular;
+  src: url('../fonts/kanit/Kanit-Regular.ttf'); 
 }
 
 @font-face {
-  font-family: Raleway-Medium;
-  src: url('../fonts/raleway/Raleway-Medium.ttf'); 
+  font-family: Kanit-Medium;
+  src: url('../fonts/kanit/Kanit-Medium.ttf'); 
 }
 
 @font-face {
-  font-family: Raleway-SemiBold;
-  src: url('../fonts/raleway/Raleway-SemiBold.ttf'); 
+  font-family: Kanit-SemiBold;
+  src: url('../fonts/kanit/Kanit-SemiBold.ttf'); 
 }
 
 @font-face {
-  font-family: Raleway-Bold;
-  src: url('../fonts/raleway/Raleway-Bold.ttf'); 
+  font-family: Kanit-Bold;
+  src: url('../fonts/kanit/Kanit-Bold.ttf'); 
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -36,12 +40,12 @@
 
 body, html {
 	height: 100%;
-	font-family: Raleway-Regular, sans-serif;
+	font-family: Kanit-Regular, sans-serif;
 }
 
 /*---------------------------------------------*/
 a {
-	font-family: Raleway-Regular;
+	font-family: Kanit-Regular;
 	font-size: 14px;
 	line-height: 1.7;
 	color: #666666;
@@ -58,7 +62,7 @@ a:focus {
 
 a:hover {
 	text-decoration: none;
-  color: #57b846;
+  color:#fcc404;
 }
 
 /*---------------------------------------------*/
@@ -67,7 +71,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 p {
-	font-family: Raleway-Regular;
+	font-family: Kanit-Regular;
 	font-size: 14px;
 	line-height: 1.7;
 	color: #666666;
@@ -139,23 +143,24 @@ iframe {
 /*//////////////////////////////////////////////////////////////////
 [ Utility ]*/
 .txt1 {
-  font-family: Raleway-SemiBold;
-  font-size: 13px;
+  font-family: Kanit-SemiBold;
+  font-size: 20px;
   color: #555555;
   line-height: 1.4;
   text-transform: uppercase;
 }
 
 .txt2 {
-  font-family: Raleway-Regular;
+  font-family: Kanit-Regular;
   font-size: 13px;
   color: #999999;
   line-height: 1.4;
 }
 
 .txt3 {
-  font-family: Raleway-Regular;
-  font-size: 13px;
+  font-family: Kanit-Regular;
+  font-size: 18px;
+  
   color: #555555;
   line-height: 1.4;
 }
@@ -202,12 +207,13 @@ iframe {
 }
 
 .login100-form-title {
-  font-family: Raleway-Medium;
+  font-family: Kanit-Medium;
   font-size: 30px;
   color: #555555;
   line-height: 1.2;
   text-transform: uppercase;
-  text-align: left;
+  text-align: center;
+  
 
   width: 100%;
   display: block;
@@ -229,7 +235,7 @@ iframe {
 
 /*---------------------------------------------*/
 .input100 {
-  font-family: Raleway-Medium;
+  font-family: Kanit-Medium;
   color: #555555;
   line-height: 1.2;
   font-size: 18px;
@@ -251,7 +257,7 @@ iframe {
   top: -1px;
   left: -1px;
   pointer-events: none;
-  border: 1px solid #57b846;
+  border: 1px solid#fcc404;
   border-radius: 3px;
 
   visibility: hidden;
@@ -262,33 +268,18 @@ iframe {
   -moz-transition: all 0.4s;
   transition: all 0.4s;
 
-  -webkit-transform: scaleX(1.1) scaleY(1.3);
-  -moz-transform: scaleX(1.1) scaleY(1.3);
-  -ms-transform: scaleX(1.1) scaleY(1.3);
-  -o-transform: scaleX(1.1) scaleY(1.3);
-  transform: scaleX(1.1) scaleY(1.3);
+
 }
 
 .input100:focus + .focus-input100 {
   visibility: visible;
   opacity: 1;
 
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -ms-transform: scale(1);
-  -o-transform: scale(1);
-  transform: scale(1);
 }
 
 .eff-focus-selection {
   visibility: visible;
   opacity: 1;
-
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -ms-transform: scale(1);
-  -o-transform: scale(1);
-  transform: scale(1);
 }
 
 /*---------------------------------------------*/
@@ -301,12 +292,13 @@ iframe {
   display: -moz-box;
   display: -ms-flexbox;
   display: flex;
-  align-items: center;
   position: absolute;
   height: 100%;
+  
   top: 0;
   right: 12px;
   padding: 0 5px;
+  
   cursor: pointer;
   -webkit-transition: background 0.4s;
   -o-transition: background 0.4s;
@@ -315,11 +307,11 @@ iframe {
 }
 
 .btn-show-pass:hover {
-  color: #57b846;
+  color:#fcc404;
 }
 
 .btn-show-pass.active {
-  color: #57b846;
+  color:#fcc404;
 }
 
 /*==================================================================
@@ -330,7 +322,7 @@ iframe {
 }
 
 .label-checkbox100 {
-  font-family: Raleway-Regular;
+  font-family: Kanit-Regular;
   font-size: 13px;
   color: #999999;
   line-height: 1.4;
@@ -362,15 +354,10 @@ iframe {
   border: 1px solid #e6e6e6;
   left: 0;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
 }
 
 .input-checkbox100:checked + .label-checkbox100::before {
-  color: #57b846;
+  color:#fcc404;
 }
 
 
@@ -387,10 +374,11 @@ iframe {
 }
 
 .login100-form-btn {
-  font-family: Raleway-Bold;
-  font-size: 16px;
+  font-family: Kanit-Bold;
+  font-size: 20px;
   color: #fff;
   line-height: 1.2;
+  width:100%;
 
   display: -webkit-box;
   display: -webkit-flex;
@@ -409,10 +397,12 @@ iframe {
   -o-transition: all 0.4s;
   -moz-transition: all 0.4s;
   transition: all 0.4s;
+  
 }
 
 .login100-form-btn:hover {
-  background-color: #57b846;
+  background-color:#fcc404;
+  color:black;
 }
 
 
@@ -436,15 +426,10 @@ iframe {
   border-radius: 3px;
   padding: 4px 25px 5px 10px;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
   right: 12px;
   pointer-events: none;
 
-  font-family: Raleway-Medium;
+  font-family: Kanit-Medium;
   color: #c80000;
   font-size: 14px;
   line-height: 1.4;
@@ -467,11 +452,6 @@ iframe {
   color: #c80000;
   font-size: 18px;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
   right: 18px;
 }
 
