--- a/public/css/main.css
+++ b/public/css/main.css
@@ -71,8 +71,8 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 }
 
 @font-face {
-  font-family: Poppins-Bold;
-  src: url('../fonts/poppins/Poppins-Bold.ttf'); 
+  font-family: Kanit-Bold;
+  src: url('../fonts/poppins/Kanit-Bold.ttf'); 
 }
 
 @font-face {
@@ -2454,3 +2454,226 @@ input.num-product::-webkit-inner-spin-button {
 	transition: all 0.4s ease-in-out;
 }
 
+/*//////////////////////////////////////////////////////////////////
+[ Table ]*/
+
+.limiter {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.container-table100 {
+  width: 100%;
+  min-height: 100vh;
+  background: #ffffff;
+
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 33px 30px;
+}
+
+.wrap-table100 {
+  width: 1400px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.table100 {
+  width: 100%;
+  display: table;
+  margin: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .table100 {
+    display: block;
+  }
+}
+
+.row100 {
+  display: table-row;
+  background: rgb(250, 250, 250);
+}
+
+.row100.header100 {
+  color: #000000;
+  background: #fcc404;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .row100 {
+    display: block;
+  }
+
+  .row1.header1 {
+    padding: 0;
+    height: 0px;
+    text-align: center;
+  }
+
+  .row100.header100 .cell100 {
+    display: none;
+  }
+
+  .row100 .cell100:before {
+    font-family: Kanit-Bold;
+    font-size: 12px;
+    color: #808080;
+    line-height: 1.2;
+    text-transform: uppercase;
+    font-weight: unset !important;
+
+    margin-bottom: 13px;
+    content: attr(data-title);
+    min-width: 98px;
+    display: block;
+  }
+}
+
+.cell100 {
+  display: table-cell;
+}
+
+@media screen and (max-width: 768px) {
+  .cell {
+    display: block;
+  }
+}
+
+.row100 .cell100 {
+  font-family: Kanit-Regular;
+  font-size: 15px;
+  color: #666666;
+  line-height: 1.2;
+  font-weight: unset !important;
+
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.row100.header100 .cell100 {
+  font-family: Kanit-Regular;
+  font-size: 18px;
+  color: rgb(0, 0, 0);
+  line-height: 1.2;
+  font-weight: unset !important;
+  text-align: center;
+
+  padding-top: 19px;
+  padding-bottom: 19px;
+}
+
+.row100 .cell100:nth-child(1) { 
+  /* ลำดับ */
+  width: 100px;
+  padding-left: 20px;
+  text-align: center;
+
+}
+.row100 .cell100:nth-child(2) {
+  /* tName */
+  width: 150px;
+  text-align: center;
+  
+}
+.row100 .cell100:nth-child(3) {
+  /* pSize */
+  width: 150px;
+  text-align: center;
+}
+.row100 .cell100:nth-child(4) {
+  /* pThick */
+  width: 150px;
+  text-align: center;
+}
+.row100 .cell100:nth-child(5) {
+  /* pWeight */
+  width: 150px;
+  text-align: center;
+}
+.row100 .cell100:nth-child(6) {
+  /* pBrand */
+  width: 150px;
+  text-align: center;
+}
+.row100 .cell100:nth-child(7) {
+  /* dQuantity */
+  width: 100px;
+  text-align: center;
+}
+.row100 .cell100:nth-child(8) {
+  /* pUnit */
+  width: 250px;
+  text-align: center;
+}
+.row100 .cell100:nth-child(9) {
+  /* dOutOfStock */
+  width: 50px;
+  text-align: center;
+}
+.row100 .cell100:nth-child(10) {
+  /* dPrice */
+  width: 150px;
+  text-align: center;
+}
+.row100 .cell100:nth-child(11) {
+  /* total */
+  width: 150px;
+  text-align: center;
+}
+
+.table100, .row100 {
+  width: 100% !important;
+}
+
+.row100:hover {
+  background-color: #dfdfdf;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .row100 {
+    border-bottom: 1px solid #f2f2f2;
+    padding-bottom: 18px;
+    padding-top: 30px;
+    padding-right: 15px;
+    margin: 0;
+  }
+  
+  .row100 .cell100 {
+    border: none;
+    padding-left: 30px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+  .row100 .cell100:nth-child(1) {
+    padding-left: 30px;
+  }
+  
+  .row100 .cell100 {
+    font-family: Kanit-Regular;
+    font-size: 18px;
+    color: #555555;
+    line-height: 1.2;
+    font-weight: unset !important;
+  }
+
+  .table100, .row100, .cell100 {
+    width: 100% !important;
+  }
+
+  /* When the checkbox is checked, add a blue background */
+  .input:checked ~ .checkmark {
+    background-color: #fcc404;
+  }
+  
+
+}
