--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2797,7 +2797,8 @@ div.center p {
   padding-left: 10px;
   float: left;
   width: 53%;
-  font-size:18px;
+  height: 160px;
+  font-size:17px;
 }
 
 .contentUnder4{
