--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2555,9 +2555,25 @@ input.num-product::-webkit-inner-spin-button {
     min-width: 98px;
     display: block;
   }
+  .row100 .cell101:before {
+    font-family: Kanit-Bold;
+    font-size: 12px;
+    color: #808080;
+    line-height: 1.2;
+    text-transform: uppercase;
+    font-weight: unset !important;
+
+    margin-bottom: 13px;
+    content: attr(data-title);
+    min-width: 98px;
+    display: block;
+  }
 }
 
 .cell100 {
+  display: table-cell;
+}
+.cell101 {
   display: table-cell;
 }
 
@@ -2578,8 +2594,31 @@ input.num-product::-webkit-inner-spin-button {
   padding-bottom: 20px;
   border-bottom: 1px solid #f2f2f2;
 }
+.row100 .cell101 {
+  font-family: Kanit-Regular;
+  font-size: 15px;
+  color: #666666;
+  line-height: 1.2;
+  font-weight: unset !important;
+
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #f2f2f2;
+}
+
 
 .row100.header100 .cell100 {
+  font-family: Kanit-Regular;
+  font-size: 18px;
+  color: rgb(0, 0, 0);
+  line-height: 1.2;
+  font-weight: unset !important;
+  text-align: center;
+
+  padding-top: 19px;
+  padding-bottom: 19px;
+}
+.row100.header100 .cell101 {
   font-family: Kanit-Regular;
   font-size: 18px;
   color: rgb(0, 0, 0);
@@ -2596,7 +2635,6 @@ input.num-product::-webkit-inner-spin-button {
   width: 100px;
   padding-left: 20px;
   text-align: center;
-
 }
 .row100 .cell100:nth-child(2) {
   /* tName */
@@ -2650,6 +2688,43 @@ input.num-product::-webkit-inner-spin-button {
   text-align: center;
 }
 
+.row100 .cell101:nth-child(1) { 
+  /* ลำดับ */
+  width: 150px;
+  padding-left: 20px;
+  text-align: center;
+}
+.row100 .cell101:nth-child(2) {
+  /* cFname cLname cCompany*/
+  width: 200px;
+  text-align: center;
+}
+.row100 .cell101:nth-child(3) {
+  /* cCompany*/
+  width: 250px;
+  text-align: center;
+}
+.row100 .cell101:nth-child(4) {
+  /* cAddress */
+  width: 300px;
+  text-align: center;
+}
+.row100 .cell101:nth-child(5) {
+  /* cPhone */
+  width: 150px;
+  text-align: center;
+}
+.row100 .cell101:nth-child(6) {
+  /* tierName */
+  width: 150px;
+  text-align: center;
+}
+.row100 .cell101:nth-child(7) {
+  /* amount */
+  width: 150px;
+  text-align: center;
+}
+
 .table100, .row100 {
   width: 100% !important;
 }
@@ -2674,7 +2749,16 @@ input.num-product::-webkit-inner-spin-button {
     padding-top: 16px;
     padding-bottom: 16px;
   }
+  .row100 .cell101 {
+    border: none;
+    padding-left: 30px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
   .row100 .cell100:nth-child(1) {
+    padding-left: 30px;
+  }
+  .row100 .cell101:nth-child(1) {
     padding-left: 30px;
   }
   
@@ -2685,8 +2769,18 @@ input.num-product::-webkit-inner-spin-button {
     line-height: 1.2;
     font-weight: unset !important;
   }
+  .row100 .cell101 {
+    font-family: Kanit-Regular;
+    font-size: 18px;
+    color: #555555;
+    line-height: 1.2;
+    font-weight: unset !important;
+  }
 
   .table100, .row100, .cell100 {
+    width: 100% !important;
+  }
+  .table100, .row100, .cell101 {
     width: 100% !important;
   }
 
@@ -2905,4 +2999,17 @@ table.evidence{
 
 table.evidence td{
   text-align: center;
+}
+
+div.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 100px;  
+  width: 250px;
+  margin-left: auto; 
+  margin-right: 20px;
+  margin-top: -80px;
+  margin-bottom: -10px;
+  padding: 20px;
+  font-size: 19px;
 }
